// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > CanHandleFallbackNavMenus story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-horizontal_7b1fec _app-header--style-docked_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <div
          class="_app-header-title__title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--headline-sm_b3eba3"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="_app-header-title__sub-title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="_app-header__nav-groups_7b1fec"
      >
        <nav
          aria-label="group-2"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r3e:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Show Profile
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="_app-header__menu_7b1fec"
      >
        <button
          aria-label="Show Menu"
          class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
        >
          <span
            class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-icon-only_7b1fec"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > Default story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-horizontal_7b1fec _app-header--style-docked_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <div
          class="_app-header-title__title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--headline-sm_b3eba3"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="_app-header-title__sub-title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="_app-header__nav-groups_7b1fec"
      >
        <nav
          aria-label="lakes"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r8:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:re:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:rk:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-left_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Profile
                      <div
                        class="_text_b3eba3 _text--appHeader-subLabel_b3eba3"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="_avatar_814665 _avatar--sm_814665 _avatar--text_814665 _avatar--color-scheme-1_814665"
                      role="img"
                    >
                      <span
                        class="_text_b3eba3 _text--label-sm_b3eba3"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="_app-header__menu_7b1fec"
      >
        <button
          aria-label="Show Menu"
          class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
        >
          <span
            class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-icon-only_7b1fec"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > DefaultWithImageLogo story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-horizontal_7b1fec _app-header--style-docked_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <a
          aria-label="homepage"
          class="_app-header__home-link_7b1fec"
          href="https://example.org"
        >
          <div
            class="_app-header-title__title_7b1fec _app-header-title--has-logo_7b1fec"
          >
            <div
              class="fpo h-[36px] w-[175px]"
              tabindex="0"
            >
              Logo goes here
            </div>
          </div>
        </a>
      </div>
      <div
        class="_app-header__nav-groups_7b1fec"
      >
        <nav
          aria-label="lakes"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r10:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r16:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1c:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1i:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-left_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Profile
                      <div
                        class="_text_b3eba3 _text--appHeader-subLabel_b3eba3"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="_avatar_814665 _avatar--sm_814665 _avatar--text_814665 _avatar--color-scheme-1_814665"
                      role="img"
                    >
                      <span
                        class="_text_b3eba3 _text--label-sm_b3eba3"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="_app-header__menu_7b1fec"
      >
        <button
          aria-label="Show Menu"
          class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
        >
          <span
            class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-icon-only_7b1fec"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > FloatingVerticalOrientation story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-vertical_7b1fec _app-header--style-floating_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <div
          class="_app-header-title__title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--headline-sm_b3eba3"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="_app-header-title__sub-title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="_drawer-content_7b1fec"
      >
        <nav
          aria-label="lakes"
          class="_drawer-content__nav-group_7b1fec"
        >
          <ul>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-current_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="_drawer-content__nav-group_7b1fec"
        >
          <ul>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-link_7b1fec"
            >
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="_icon_779da8"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-link_7b1fec"
            >
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="_icon_779da8"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-separator_7b1fec"
            >
              <hr
                class="_hr_8bd4b7 _app-header__nav-item--separator_7b1fec"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-menu_7b1fec"
            >
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__menu-trigger_7b1fec _app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r32:"
                >
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-left_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Profile
                      <div
                        class="_text_b3eba3 _text--appHeader-subLabel_b3eba3"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="_avatar_814665 _avatar--sm_814665 _avatar--text_814665 _avatar--color-scheme-1_814665"
                      role="img"
                    >
                      <span
                        class="_text_b3eba3 _text--label-sm_b3eba3"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > MobileFloatingVerticalEmpty story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-vertical_7b1fec _app-header--style-floating_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <div
          class="_app-header-title__title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--headline-sm_b3eba3"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="_app-header-title__sub-title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="_drawer-content_7b1fec"
      />
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > StyleFloating story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-horizontal_7b1fec _app-header--style-floating_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <div
          class="_app-header-title__title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--headline-sm_b3eba3"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="_app-header-title__sub-title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="_app-header__nav-groups_7b1fec"
      >
        <nav
          aria-label="lakes"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1u:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r24:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2a:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-none_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="_icon_779da8"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="_app-header__nav-group_7b1fec"
        >
          <ul>
            <li>
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2g:"
                >
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-left_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Profile
                      <div
                        class="_text_b3eba3 _text--appHeader-subLabel_b3eba3"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="_avatar_814665 _avatar--sm_814665 _avatar--text_814665 _avatar--color-scheme-1_814665"
                      role="img"
                    >
                      <span
                        class="_text_b3eba3 _text--label-sm_b3eba3"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="_app-header__menu_7b1fec"
      >
        <button
          aria-label="Show Menu"
          class="_app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
        >
          <span
            class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-icon-only_7b1fec"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > VerticalDefaultWithImageLogo story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-vertical_7b1fec _app-header--style-docked_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <a
          aria-label="homepage"
          class="_app-header__home-link_7b1fec"
          href="https://example.org"
        >
          <div
            class="_app-header-title__title_7b1fec _app-header-title--has-logo_7b1fec"
          >
            <div
              class="fpo h-[36px] w-[175px]"
              tabindex="0"
            >
              Logo goes here
            </div>
          </div>
        </a>
      </div>
      <div
        class="_drawer-content_7b1fec"
      >
        <nav
          aria-label="lakes"
          class="_drawer-content__nav-group_7b1fec"
        >
          <ul>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-current_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="_drawer-content__nav-group_7b1fec"
        >
          <ul>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-link_7b1fec"
            >
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="_icon_779da8"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-link_7b1fec"
            >
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="_icon_779da8"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-separator_7b1fec"
            >
              <hr
                class="_hr_8bd4b7 _app-header__nav-item--separator_7b1fec"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-menu_7b1fec"
            >
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__menu-trigger_7b1fec _app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r38:"
                >
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-left_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Profile
                      <div
                        class="_text_b3eba3 _text--appHeader-subLabel_b3eba3"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="_avatar_814665 _avatar--sm_814665 _avatar--text_814665 _avatar--color-scheme-1_814665"
                      role="img"
                    >
                      <span
                        class="_text_b3eba3 _text--label-sm_b3eba3"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> > VerticalOrientation story renders snapshot 1`] = `
<header
  class="_app-header_7b1fec _app-header--orientation-vertical_7b1fec _app-header--style-docked_7b1fec"
>
  <div>
    <div
      class="_app-header__content_7b1fec"
    >
      <div
        class="_app-header-title_7b1fec"
      >
        <div
          class="_app-header-title__title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--headline-sm_b3eba3"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="_app-header-title__sub-title_7b1fec"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="_drawer-content_7b1fec"
      >
        <nav
          aria-label="lakes"
          class="_drawer-content__nav-group_7b1fec"
        >
          <ul>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-current_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-tree_7b1fec"
            >
              <menu>
                <div
                  class="_drawer-content__header-container_7b1fec"
                >
                  <div>
                    <span
                      class="_app-header__nav-item--button_7b1fec _app-header_nav-item-label_7b1fec"
                    >
                      <span
                        class="_text_b3eba3 _text--overline-sm_b3eba3"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec"
                      href="https://example.org"
                    >
                      <span
                        class="_app-header__nav-item--icon-layout-none_7b1fec"
                      >
                        <span
                          class="_text_b3eba3 _text--appHeader-label_b3eba3"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="_drawer-content__nav-group_7b1fec"
        >
          <ul>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-link_7b1fec"
            >
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="_icon_779da8"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-link_7b1fec"
            >
              <a
                class="_app-header__nav-item_7b1fec _app-header__nav-item--link_7b1fec _app-header__nav-item--is-external_7b1fec"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="_app-header__nav-item--icon-layout-none_7b1fec"
                >
                  <span
                    class="_text_b3eba3 _text--appHeader-label_b3eba3"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="_icon_779da8"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-separator_7b1fec"
            >
              <hr
                class="_hr_8bd4b7 _app-header__nav-item--separator_7b1fec"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="_drawer-content__nav-group-item_7b1fec _drawer-content__nav-group-item--type-menu_7b1fec"
            >
              <div
                class="_menu_33ee5b"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="_app-header__menu-trigger_7b1fec _app-header__nav-item_7b1fec _app-header__nav-item--button_7b1fec"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2s:"
                >
                  <svg
                    aria-hidden="true"
                    class="_icon_779da8"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                  <span
                    class="_app-header__nav-item--button_7b1fec _app-header__nav-item--icon-layout-left_7b1fec"
                  >
                    <span
                      class="_text_b3eba3 _text--appHeader-label_b3eba3"
                    >
                      Profile
                      <div
                        class="_text_b3eba3 _text--appHeader-subLabel_b3eba3"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="_avatar_814665 _avatar--sm_814665 _avatar--text_814665 _avatar--color-scheme-1_814665"
                      role="img"
                    >
                      <span
                        class="_text_b3eba3 _text--label-sm_b3eba3"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;
